[package]
name = "rctf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
clap = { version = "4.3.23", features = ["derive"] }
config = "0.13.3"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.28"
russh = "0.38.0"
russh-keys = "0.38.0"
serde = { version = "1.0.183", features = ["derive"] }
shlex = "1.1.0"
tokio = { version = "1.32.0", features = ["full"] }
